cs360/.svn/pristine/94/948ccb9852e294d49e56f47020280d351e46e168.svn-base
tf4.c:8:31: error: ‘fred’ undeclared here (not in a function)
 static int GLOBALS_ARE_EVIL = fred;
                               ^
Command failed.  Exiting
